substrate/frame/support/test/tests/pallet_ui/hold_reason_non_enum.stderr
error: Invalid pallet::composite_enum, expected enum item
  --> tests/pallet_ui/hold_reason_non_enum.rs:27:2
   |
27 |     pub struct HoldReason;
   |     ^^^
